# PatchIccMAX

./: .gitignore  BUILD.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ChangeLog  CreateAllProfiles.sh  DemoIccMAX-Readme.html  LICENSE.md  README.md  Readme.md  RefIccMAXConfig.cmake  RefIccMAXUninstall.cmake  Security.md  dependencies.json  package.json  pr171-wasm.sh  re231.sh  trigger.txt  triggered.txt  triggerfile.txt  triggerfile1.txt  triggerfile10.txt  triggerfile11.txt  triggerfile12.txt  triggerfile13.txt  triggerfile2.txt  triggerfile9.txt  triggering.txt  triggering2.txt  vcpkg-configuration.json  vcpkg.json
.github/: labeler.yml  workfwin54-cache.yaml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/scripts/: lint_check.sh  sanitize.sh
.github/workflows/: 03112025-win.yaml  (+332 more)
IccProfLib/: IccArrayBasic.cpp  IccArrayBasic.h  IccArrayFactory.cpp  IccCAM.cpp  IccCmm.cpp  IccCmm.h  IccCmmSearch.cpp  IccCmmSearch.h  IccConvertUTF.cpp  IccConvertUTF.h  IccDefs.h  IccEncoding.cpp  IccEncoding.h  IccEnvVar.h  IccEval.cpp  IccEval.h  IccIO.cpp  IccIO.h  IccMD5.h  IccMatrixMath.cpp  IccMpeACS.cpp  IccMpeACS.h  IccMpeBasic.cpp  IccMpeBasic.h  IccMpeCalc.cpp  IccMpeCalc.h  IccMpeFactory.cpp  IccMpeSpectral.cpp  IccMpeSpectral.h  IccProfLibConf.h  IccProfLibVer.h  IccProfLib_CRTDLL_v22.vcxproj  IccProfLib_DLL_v22.vcxproj  IccProfLib_v22.vcxproj  IccProfile.cpp  IccSearch.h  IccSignatureUtils.h  IccSparseMatrix.cpp  IccStructBasic.cpp  IccStructFactory.cpp  (+20 more)
IccXML/: README
Testing/: CreateAllProfiles.bat  CreateAllProfiles.sh  CreateAllProfiles_d.bat  RunTests.bat  RunTests.sh  RunTests_d.bat  creation_report.txt  run_all_tests.ps1  run_all_tests.sh  run_all_tests.zsh  testing_summary.sh  testing_summary.zsh  xnu_export_icc_to_xml.zsh
Tools/wxWidget/wxProfileDump/: CMakeLists.txt  Readme.md  wxProfileDump.cpp  wxProfileDump.h  wxProfileDump.ruleset  wxProfileDump_v22.sln  wxProfileDump_v22.vcxproj
Tools/wxWidget/wxProfileDump/vc_msw/wxProfileDump/: wxProfileDump.nativecodeanalysis.xml
Tools/wxWidget/wxProfileDump/vc_msw_x64/wxProfileDump/: vc.nativecodeanalysis.all.xml  wxProfileDump_v22.vcxproj.FileListAbsolute.txt
Tools/wxWidget/wxProfileDump/vc_mswd/wxProfileDump/: wxProfileDump.nativecodeanalysis.sarif  wxProfileDump.nativecodeanalysis.xml
Tools/wxWidget/wxProfileDump/vc_mswd_x64/wxProfileDump/: CodeAnalysisResultManifest.txt  vc.nativecodeanalysis.all.xml  wxProfileDump.res  wxProfileDump_v22.vcxproj.FileListAbsolute.txt
contrib/: Doxyfile  Readme.md  header.html  iccdev.zsh
cov/: Readme.md  build.sh  cov_tag_sample.md
docs/: SECURITY_ANALYSIS_UCI.md  build.md
(+279 files in other folders)
